Refactor: extract repeated logic into `registerCurrentService` and `popRuleIfAdded`, improve exception handling, and fix deprecated `newInstance` usage